...
                  title: _todoController.text,
                );

                _todoController.clear();
                Navigator.pop(context);
              },
              child: const Text("Add"),
            ),
          ],
        );
      },
    );
  }
...
              TextButton(
                onPressed: () {
                  homePageViewModel.toggleCompletedTodos();
                },
                child: showCompletedTodos
                    ? const Text("Hide Done")
                    : const Text("Show Done"),
              ),
            ],
          ),
          body: ListView.builder(
            itemCount: todos.length,
            itemBuilder: (context, index) {
...
